abandon fix + data fix + UI "?" wrap fix + config safe fix + style zoom

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     box-sizing: border-box;
 }
 
+html {
+    font-size: 1.4rem;
+}
+
 body {
     background-color: #333;
     color: #ddd;
@@ -61,7 +65,7 @@ header {
 
 .side-menu-wrapper {
     top: 50%;
-    max-width: min(50vw,50rem);
+    max-width: min(50vw,50em);
     transition: transform 0.3s ease-in-out;
 }
 
@@ -70,14 +74,14 @@ header {
 }
 
 .side-menu>h3 {
-    padding-right: 1em;
+    padding-right: 1rem;
 }
 
 .close-btn {
     font-size: 1.1rem;
     aspect-ratio: 1;
-    padding: .15rem .3rem;
-    margin-top: .5rem !important;
+    padding: .15em .3rem;
+    margin-top: .5em !important;
     border-radius: .2rem;
 }
 
